@@ -25,7 +25,8 @@ matrix:
         - TOXENV=du15
         - PYTEST_ADDOPTS="--cov ./ --cov-append --cov-config setup.cfg"
     - python: 'nightly'
-      env: TOXENV=py38
+      env:
+        - TOXENV=du16
     - python: '3.6'
       env: TOXENV=docs
     - python: '3.6'
