@@ -14,6 +14,7 @@ deps =
     du13: docutils==0.13.1
     du14: docutils==0.14
     du15: docutils==0.15
+    du16: docutils==0.16b0.dev0
 extras =
     test
 setenv =
